--- a/Noter/View/CollectionCell.xib
+++ b/Noter/View/CollectionCell.xib
@@ -11,11 +11,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="noteItem" id="gTV-IL-0wX" customClass="CollectionViewCell" customModule="Noter" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="350" height="80"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="" id="gTV-IL-0wX" customClass="CollectionViewCell" customModule="Noter" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="342" height="80"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="350" height="80"/>
+                <rect key="frame" x="0.0" y="0.0" width="342" height="80"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Note text" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WPM-S5-Wmc">
@@ -26,7 +26,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Id0-mG-xkt">
-                        <rect key="frame" x="20" y="59" width="42" height="14"/>
+                        <rect key="frame" x="20" y="59" width="312" height="14"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <fontDescription key="fontDescription" type="system" pointSize="10"/>
                         <nil key="textColor"/>
@@ -35,12 +35,12 @@
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
-            <size key="customSize" width="350" height="80"/>
+            <size key="customSize" width="342" height="80"/>
             <connections>
-                <outlet property="dateLabel" destination="Id0-mG-xkt" id="tAx-9E-eFS"/>
-                <outlet property="noteText" destination="WPM-S5-Wmc" id="gSs-ek-9ha"/>
+                <outlet property="dateLabel" destination="Id0-mG-xkt" id="ugX-ll-9WD"/>
+                <outlet property="noteText" destination="WPM-S5-Wmc" id="U54-Eh-Ayx"/>
             </connections>
-            <point key="canvasLocation" x="366.39999999999998" y="167.31634182908547"/>
+            <point key="canvasLocation" x="360" y="167.31634182908547"/>
         </collectionViewCell>
     </objects>
 </document>
